Regression: Black Faces on mesh extrude #110543

Closed
opened 2023-07-27 17:45:08 +02:00 by Guillermo Venegas · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67

Blender Version
Broken: version: 4.0.0 Alpha, branch: test, commit date: 2023-07-27 15:13, hash: ca1066faf3a2
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error

  1. Enter Edit Mode with Default Cube
  2. Extrude a face and new faces will shown black
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67 **Blender Version** Broken: version: 4.0.0 Alpha, branch: test, commit date: 2023-07-27 15:13, hash: `ca1066faf3a2` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** 1. Enter `Edit Mode` with `Default Cube` 2. `Extrude a face` and new faces will shown black <video src="https://projects.blender.org/attachments/f13e317b-c8ab-4b00-a1ae-70d5adfdd907" title="2023-07-18 22-08-45.mp4" controls></video>
Guillermo Venegas added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-27 17:45:08 +02:00
Member

Thanks for the report. Can confirm, will do the bisect

Thanks for the report. Can confirm, will do the bisect
Pratik Borhade changed title from Black Faces on mesh extrude to Regression: Black Faces on mesh extrude 2023-07-28 05:07:47 +02:00
Member

Bisecting points to 932332ad6e
@JacquesLucke ^

Bisecting points to 932332ad6e7e39ad33d4c1feb721d1302700e70b @JacquesLucke ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-28 13:50:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110543
No description provided.