Fix #110543: black faces on mesh extrude

That was a mistake in 932332ad6e7e39ad33d4c1feb721d1302700e70b.